--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 	<script>
-		let document_url = "https://jsonblob.com/api/1210465283453345792";
+		let document_url = "https://jsonblob.com/api/1210743776858726400";
 		var petarray=  '';
 		document.addEventListener("DOMContentLoaded", function() {
 			$.get(document_url, function(data, status){
@@ -207,17 +207,17 @@
 				event.stopPropagation();
 				editIsOpened = true;
 				index_num = $(this).parent().parent().parent().data('index');
-				$("#name").val(pets[index_num].name);
-				$("#type").val(pets[index_num].type);
-				$("#breed").val(pets[index_num].breed);
-				$("#sex").val(pets[index_num].sex);
-				$("#fixed").val(pets[index_num].fixed);
-				$("#age").val(pets[index_num].age);
+				$("#name").val(petarray[index_num].name);
+				$("#type").val(petarray[index_num].type);
+				$("#breed").val(petarray[index_num].breed);
+				$("#sex").val(petarray[index_num].sex);
+				$("#fixed").val(petarray[index_num].fixed);
+				$("#age").val(petarray[index_num].age);
 				console.log($("input[name='name']").val());
 				
 				$('#status').empty();
-				for(let i=0; i<pets[index_num].status.length; i++){
-					$('#status').append(`<input type="text" id="status-${i}" value="${pets[index_num].status[i]}"/>
+				for(let i=0; i<petarray[index_num].status.length; i++){
+					$('#status').append(`<input type="text" id="status-${i}" value="${petarray[index_num].status[i]}"/>
 											<button class="delete_a_status btn btn-sm btn-primary">-</button>`);
 				}
 				$('#edit-modal').modal('show');
@@ -225,17 +225,35 @@
 
 			$(document).on('click','#btn-save-changes', function(){
 				if (index_num !== undefined && index_num !== null){
-					pets[index_num].name = $("#name").val();
-					pets[index_num].type = $("#type").val();
-					pets[index_num].breed = $("#breed").val();
-					pets[index_num].sex = $("#sex").val();
-					pets[index_num].fixed = $("#fixed").val();
-					pets[index_num].age = $("#age").val();
-					for (let i=0; i < pets[index_num].status.length; i++ ){
-						pets[index_num].status[i] = $(`#status-${i}`).val();
+					petarray[index_num].name = $("#name").val();
+					petarray[index_num].type = $("#type").val();
+					petarray[index_num].breed = $("#breed").val();
+					petarray[index_num].sex = $("#sex").val();
+					petarray[index_num].fixed = $("#fixed").val();
+					petarray[index_num].age = $("#age").val();
+					for (let i=0; i < petarray[index_num].status.length; i++ ){
+						petarray[index_num].status[i] = $(`#status-${i}`).val();
 					}
 
 					updateCard(index_num);
+					console.log(petarray[0]);
+
+					$.ajax({
+					type: "PUT",
+					url: "https://jsonblob.com/api/jsonBlob/1077296012858769408",
+					data: JSON.stringify({"content":"here"}),
+					contentType: "application/json; charset=utf-8",
+					dataType: "json",
+					success: function(xhr,data,response){
+						console.log(xhr);
+						console.log(data);
+						console.log(response);
+						console.log(response.getAllResponseHeaders());
+					},
+					error: function(errMsg) {
+						alert(errMsg);
+					}
+				});
 
 					$('#edit-modal').modal('hide');
 					editIsOpened = false;
@@ -243,13 +261,13 @@
 			});
 
 			$(document).on('click', '#add_another_status', function(event){
-				let i = pets[index_num].status.length;
+				let i = petarray[index_num].status.length;
 				event.stopPropagation();
 				event.preventDefault();
 				let newStatusInput = $(`<input type="text" id="status-${i}" />
 										<button class="delete_a_status btn btn-sm btn-primary">-</button>`);
 				$('#status').append(newStatusInput);
-				pets[index_num].status.push(newStatusInput.val());
+				petarray[index_num].status.push(newStatusInput.val());
 			});
 
 			$(document).on('click', '.delete_a_status', function(event){
