--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"></link>
 	<link href="reboot.css"></link>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide"></link>
-	<script src="data.js"></script>
+	<!--<script src="data.js"></script>-->
 	<style>
 		body {
 		  font-family: "Audiowide", sans-serif;
